Version 2.3.1

  - adapted to new CARAT build system (using autotools)
  - caught a further case in CaratReadMultiBravaisFile

Version 2.3

  - switched to GitHub version of CARAT
  - code cleanup in CARAT, resulting in a vastly reduced number of
    compilation warnings
  - support for a environment variable CARAT_DIR pointing to the
    CARAT base directory. Using it, one can override the location
    of CARAT at compile time
  - catch the trivial 1d case in NormalizerInGLnZ

Version 2.2.3

  - build system improvements - compiles now on MacOS
  - automatic tests and code coverage of tests added

Version 2.2.2

  - added more flexibility to build process
  - builds now also on MacOS

Version 2.2.1

  - wrong date corrected

Version 2.2.0

  - new CARAT tarball from Aachen, includes now a GPL 3 license file
  - new build system with configure & make, builds CARAT with the same
    GMP library as GAP
  - bugs in ConjugatorQClass and CaratQClassCatalog fixed
  - testfiles added

Version 2.1.7

  - improved build instructions for gcc 5 or higher

Version 2.1.6

  - updated config.guess

Version 2.1.5

  - build only static version of gmplib, so that this one must be used

Version 2.1.4

  - fixed file permissions

Version 2.1.3

  - another small fix in PackageInfo.g

Version 2.1.2

  - small fix in PackageInfo.g

Version 2.1.1

  - update to GAP version 4.5

Version 2.1

  - update to CARAT version 2.1b1

Version 2.0.2

  - included updated version of CARAT 2.0 with a newer version of GMP,
    which compiles also with gcc 4.1.

Version 2.0.1

  - BravaisGroupsCrystalFamily stored wrong sizes in groups.

Version 2.0

  - switch to CARAT 2.0 (without GAP interface update)

Version 1.1.3

  - BravaisSubgroups and BravaisSupergroups stored wrong sizes in groups.

Version 1.1.2

  - File manual.toc added.

Version 1.1.1

  - made CARAT_TMP_DIR work with saved workspaces

  - CaratInvariantFormSpace implemented, but not yet documented
