@@ -2,10 +2,14 @@
 \Chapter{Installation}
 
 {\GAP} is distributed together with a large number of packages, including
-this one. {\Carat} is located inside the subdirectory `pkg/carat/' of your 
-{\GAP} installation, and needs to be compiled. If you do not want to build 
-all packages with the script `BuildPackages.sh' from {\GAP}, you can build 
-{\Carat} alone by executing these commands inside the directory `pkg/carat/':
+this one. {\CaratInterface} is located inside the subdirectory
+`pkg/CaratInterface/' of your {\GAP} installation, and the {\CARAT}
+programs contained in it must be compiled. Compilation is most
+conveniently done with the script `BuildPackages.sh' from {\GAP}.
+You can either build (almost) all packages, or only a single one
+by giving its name on the command line. Alternatively, you can
+compile {\CARAT} inside {\CaratInterface} manually, by executing
+these commands inside the directory `pkg/CaratInterface/':
 
 \begintt
 ./configure <path-to-GAP-root>
@@ -14,10 +18,13 @@ make
 
 The configure script optionally takes the path to the root directory of 
 your {\GAP} installation as argument. The default `../..' should usually 
-work, but if you have unpacked {\Carat} to a location like `~/.gap/pkg/carat/', 
-you need to explicitly give the path to the {\GAP} root directory as argument.
-The result of `configure' is written to the file `config.carat', which can be
-inspected if something goes wrong.
+work, if the package is located in the `pkg' subdirectory of the {\GAP}
+root directory,
+but if you have unpacked {\CaratInterface} to a location like
+`~/.gap/pkg/CaratInterface/', you need to explicitly give the path to
+the {\GAP} root directory as argument. The result of `configure' is
+written to the file `config.carat', which can be inspected if something
+goes wrong.
 
 If {\GAP} was configured to use a specific GMP library, or the GMP library
 bundled with {\GAP}, then {\CARAT} will try to use that same GMP library.
@@ -40,7 +47,7 @@ including all options are these:
 As {\CARAT}'s catalog of Q-classes of unimodular groups is rather large,
 it is unpacked by default only up to dimension~5. If you also want
 to unpack the data for dimension~6, you can do this with the extra
-command (again inside directory `pkg/carat/')
+command (again inside directory `pkg/CaratInterface/')
 
 \begintt
 make qcat6
