@@ -1,9 +1,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Chapter{Introduction}
 
-\index{carat}
+\index{caratinterface}
 
-The package {\Carat} contains GAP interface routines to {\CARAT}, 
+The package {\CaratInterface} contains GAP interface routines to {\CARAT}, 
 a package of programs for the computation with crystallographic
 groups. {\CARAT} is implemented in C, and has been developed by
 J.~Opgenorth, W.~Plesken, and T.~Schulz at Lehrstuhl~B f\accent127ur 
@@ -21,8 +21,8 @@ The present package thereby extends the functionality of {\Cryst}
 considerably.
 
 {\CARAT} itself is NOT part of this package. However, for your convenience,
-and with the permission of the {\CARAT} authors, a copy of {\CARAT} 
-has been included. It is this version with which the interface routines 
+and in accordance with the {\CARAT} license, a copy of {\CARAT} is 
+included. It is this version with which the interface routines 
 have been tested. The most recent version of {\CARAT} can be obtained at 
 
 \beginitems
@@ -43,13 +43,18 @@ D-33501 Bielefeld\hfill\break
 \enditems
 
 For bug reports, suggestions and comments regarding the interface routines, 
-please use the issue tracker on the GitHub page of the package:
+please use the issue tracker on GitHub:
 
 \beginitems
 &
-\URL{https://github.com/gap-packages/carat/issues/}
+\URL{https://github.com/gap-packages/CaratInterface/issues/}
 \enditems
 
-Bug reports regarding {\CARAT} itself should be sent to
-\Mailto{carat@momo.math.rwth-aachen.de}.
+Bug reports regarding {\CARAT} itself should be reported in the
+{\CARAT} issue tracker on GitHub:
+
+\beginitems
+&
+\URL{https://github.com/lbfm-rwth/carat/issues/}
+\enditems
 
