@@ -1,5 +1,5 @@
 C introduction.tex 1. Introduction
-I 1.0. carat
+I 1.0. caratinterface
 C installation.tex 2. Installation
 C carat.tex 3. Interface to CARAT
 S 3.1. Action from the left and from the right
