@@ -1,9 +1,9 @@
 \input ../../../doc/gapmacro.tex
 \Package{CARAT}
-\Package{Carat}
+\Package{CaratInterface}
 \Package{Cryst}
 
-\BeginningOfBook{carat}
+\BeginningOfBook{caratinterface}
 
 \UseReferences{../../../doc/ref}
 
@@ -19,7 +19,7 @@
   \centerline{Postfach 10 01 31, D-33501 Bielefeld}\medskip
   \centerline{\tt gaehler@math.uni-bielefeld.de}
   \vfill
-  \centerline{\secfont Based on CARAT of 24 Oct 2019 at}\medskip
+  \centerline{\secfont Based on CARAT of 14 Nov 2019 at}\medskip
   \centerline{\secfont https://github.com/lbfm-rwth/carat}
   \bigskip
   \centerline{by}
