@@ -1,6 +1,6 @@
 <?php 
-  $Carat_Version    = '2.3.1';
-  $CARAT_Version    = '11 Nov 2019';
-  $Carat_Date       = '11 Nov 2019';
-  $Carat_Size       = '7036 kB';
+  $CaratInterface_Version    = '2.3.1';
+  $CARAT_Version             = '14 Nov 2019';
+  $CaratInterface_Date       = '14 Nov 2019';
+  $CaratInterface_Size       = '7036 kB';
 ?>
