@@ -5,7 +5,7 @@
 
 <head>
 
-<title>Changelog of the Package Carat</title>
+<title>Changelog of the Package CaratInterface</title>
 
 <link type="text/css" rel="stylesheet" href="/~gaehler/mystyle.css" />
 
@@ -13,13 +13,15 @@
 
 <body>
 
-<h1>Changelog of the Package Carat</h1>
+<h1>Changelog of the Package CaratInterface</h1>
 
 <h3>Version 2.3.1</h3>
 
 <ul>
+  <li>changed name to CaratInterface</li>
   <li>adapted to new CARAT build system (using autotools)</li>
-  <li>caught a further case in CaratReadMultiBravaisFile</li>
+  <li>further code cleanup in CARAT</li>
+  <li>caught a case in CaratReadMultiBravaisFile</li>
 </ul>
   
 <h3>Version 2.3</h3>
