@@ -8,11 +8,11 @@
 
 ./make_tar
 
-cp ../README        ~/WWW/gap/Carat/README.carat
-cp VERSION          ~/WWW/gap/Carat
-cp changelog.html   ~/WWW/gap/Carat
-mv *.tar.gz         ~/WWW/gap/Carat
-cp ../PackageInfo.g ~/WWW/gap/Carat
+grep -v svg ../README.md > ~/WWW/gap/CaratInterface/README.CaratInterface
+cp VERSION                 ~/WWW/gap/CaratInterface
+cp changelog.html          ~/WWW/gap/CaratInterface
+mv *.tar.gz                ~/WWW/gap/CaratInterface
+cp ../PackageInfo.g        ~/WWW/gap/CaratInterface
 
 cd ~/WWW/gap; ./get_html; chmod -R a+r *
 
