@@ -107,10 +107,11 @@ DeclareGlobalFunction( "CaratHelp" );
 ##
 #F  set CARAT base directory
 ##
-caratpath := Filename(DirectoriesPackagePrograms("carat"), "setcaratdir.so");
+caratpath := Filename( DirectoriesPackagePrograms( "CaratInterface" ),
+                       "setcaratdir.so" );
 if (not IsBound(SET_CARAT_DIR) and caratpath <> fail) then
   LoadDynamicModule( caratpath );
-  caratpath := Filename( DirectoriesPackageLibrary("carat","carat"), "" );
+  caratpath := Filename( DirectoriesPackageLibrary( "CaratInterface", "carat" ), "" );
   SET_CARAT_DIR( caratpath );
 fi;
 Unbind(caratpath);
