@@ -5,5 +5,7 @@
 #Y  Copyright (C) 1999-2012,  Franz G"ahler, Mathematik, Bielefeld University
 ##
 
-ReadPackage( "carat", "gap/carat.gd" );  # low level Carat interface routines
+# low level Carat interface routines
+ReadPackage( "CaratInterface", "gap/carat.gd" );
+
 
