@@ -1,7 +1,9 @@
 Version 2.3.1
 
+  - changed name to CaratInterface
   - adapted to new CARAT build system (using autotools)
-  - caught a further case in CaratReadMultiBravaisFile
+  - further code cleanup in CARAT
+  - caught a case in CaratReadMultiBravaisFile
 
 Version 2.3
 
